--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -74,6 +74,7 @@
                   <b>Resources:</b>
                   <a href="https://purl.archive.org/ai4s/ontology/planning" target="_blank">[PURL]</a>
                   <a href="https://github.com/ai4society/planning-ontology-tool" target="_blank">[Plugin Repository]</a>
+                  <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
                 </p>
               </div>
               <div style="flex: 1; min-width: 280px; text-align: center;">
