Update references to planning ontology website

--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -55,7 +55,7 @@
           <p style="text-align: justify;">
             We hypothesize that given a large number of available planners and diverse planning domains, they carry
             essential information that can be leveraged to identify suitable planners and improve their performance. We
-            use data from the International Planning Competition (IPC) to construct a planning ontology and demonstrate
+            use data from the International Planning Competition (IPC) to construct a <b>planning ontology (PO)</b> and demonstrate
             that it can lead to the selection of promising planners and improve their performance using macros—a form of
             action ordering constraints extracted from the ontology.
           </p>
@@ -74,7 +74,7 @@
                   <b>Resources:</b>
                   <a href="https://purl.archive.org/ai4s/ontology/planning" target="_blank">[PURL]</a>
                   <a href="https://github.com/ai4society/planning-ontology-tool" target="_blank">[Plugin Repository]</a>
-                  <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+                  <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[PO Website]</a>
                 </p>
               </div>
               <div style="flex: 1; min-width: 280px; text-align: center;">
@@ -92,7 +92,7 @@
               Huhns & Vignesh Narayanan <br>
               <em>Discovery Data Journal, 3, 55 (2025). https://doi.org/10.1007/s44248-025-00093-9</em><br>
               <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">[Paper]</a>
-              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[PO Website]</a>
             </li>
 
             <li>
@@ -102,7 +102,7 @@
               <em>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India,
                 2024.</em><br>
               <a href="./files/CODS_24_AI_Planning_Ontology.pdf" target="_blank">[Paper]</a>
-              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[PO Website]</a>
             </li>
           </ul>
 
