Update link text for maPO website in index.html

--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -144,7 +144,7 @@
               <strong>maPO: An Ontology for Multi-Agent Path Finding and Its Usage for Explaining Planner
                 Behaviour</strong><br>
               <a href="files/MAPF_Ontology.pdf" target="_blank">[Paper]</a>
-              <a href="https://ai4society.github.io/ma-planning-ontology/" target="_blank">[Website]</a>
+              <a href="https://ai4society.github.io/ma-planning-ontology/" target="_blank">[maPO Website]</a>
             </li>
 
             <li><b>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b><br>
