added website callouts

--- a/projects/ontology/index.html
+++ b/projects/ontology/index.html
@@ -60,6 +60,14 @@
             action ordering constraints extracted from the ontology.
           </p>
 
+          <div class="website-callout">
+
+            <p>
+              Explore the full ontology documentation, competency questions, SPARQL queries, and use cases for planner selection and explanation generation on the
+              <a href="https://ai4society.github.io/planning-ontology/" target="_blank">Planning Ontology Website</a>.
+            </p>
+          </div>
+
           <div
             style="border: 1px solid #eee; border-left: 5px solid var(--primary-color); background-color: #fff; padding: 15px; border-radius: 4px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); margin-top: 20px;">
             <h4 style="font-size: 16px; margin-top: 0; color: var(--primary-color);">Planning Ontology Tool</h4>
@@ -136,6 +144,14 @@
             traces and transforms them into a rich knowledge graph. This allows stakeholders to ask complex questions
             about the planner's behavior and receive human-readable explanations.
           </p>
+
+          <div class="website-callout">
+
+            <p>
+              Try the interactive dashboard with knowledge graph visualization, grid-based simulation, and SPARQL querying for MAPF analysis on the
+              <a href="https://ai4society.github.io/ma-planning-ontology/" target="_blank">maPO Website</a>.
+            </p>
+          </div>
 
           <p style="margin-top: 20px;"><em><b>Representative Publication</b></em></p>
           <ul>
