Fix HTML encoding issues in index.html

--- a/planfm/index.html
+++ b/planfm/index.html
@@ -33,7 +33,7 @@
 
   <main class="main">
     <section class="hero">
-      <p class="nsf-label">NSF EAGER Award Abstract #2454027</p>
+      <p class="nsf-label">NSF EAGER Award #2454027</p>
       <h1 class="project-title">Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</h1>
     </section>
   
@@ -112,6 +112,7 @@
 </body>
 
 </html>
+
 
 
 
